tests/ui/dep-graph/dep-graph-trait-impl.stderr
error: OK
  --> $DIR/dep-graph-trait-impl.rs:28:34
   |
LL |     #[rustc_then_this_would_need(typeck_root)]
   |                                  ^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-trait-impl.rs:33:34
   |
LL |     #[rustc_then_this_would_need(typeck_root)]
   |                                  ^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-trait-impl.rs:38:34
   |
LL |     #[rustc_then_this_would_need(typeck_root)]
   |                                  ^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-trait-impl.rs:43:34
   |
LL |     #[rustc_then_this_would_need(typeck_root)]
   |                                  ^^^^^^^^^^^

error: no path from `x::<impl Foo for char>` to `typeck_root`
  --> $DIR/dep-graph-trait-impl.rs:56:34
   |
LL |     #[rustc_then_this_would_need(typeck_root)]
   |                                  ^^^^^^^^^^^

error: aborting due to 5 previous errors

